--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "colors": "1.1.2",
     "express": "4.13.3",
     "jsonschema": "1.0.2",
+    "lodash": "^4.0.0",
     "node-data-handling": "0.1.0",
     "rootpath": "0.1.2",
     "tq1-helpers": "git+https://github.com/tq1/br-tq1-helpers.git#0.0.1",
