--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "For internal use only",
   "homepage": "https://github.com/indigotech/br-taqtile-node_base_project-server-api",
   "dependencies": {
+    "async": "^1.5.2",
     "body-parser": "1.14.1",
     "coffee-script": "1.10.0",
     "colors": "1.1.2",
